manifests/app/dreamkast/overlays/development/ui-54/deployment-dreamkast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
  name: dreamkast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamkast
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dreamkast
    spec:
      containers:
      - name: dreamkast
        image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-ecs:main
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "bin/rails db:migrate && bin/rails db:seed"]
        ports:
          - containerPort: 3000
            resources:
